--- a/css/styles.css
+++ b/css/styles.css
@@ -30,8 +30,6 @@ body{
 .brand-img{
     margin: .5rem;
     padding-left: 1rem; 
-    max-width: 75%;
-    max-height: 75%;
 }
 
 .navbar-links ul{
@@ -58,7 +56,7 @@ body{
 
 .toggle-button{
     position: absolute;
-    top: 3.5rem;
+    top: 2.5rem;
     right: 1rem;
     display: none;
     flex-direction: column;
@@ -75,6 +73,11 @@ body{
 }
 
 @media(max-width: 950px){
+    .brand-img a img{
+        max-width: 75%;
+        max-height: 75%;
+    }
+
     .toggle-button{
         display: flex;
     }
@@ -557,8 +560,8 @@ footer p{
 }
 
 .team-container .member-box .member-img img{
-    max-width: 300px;
-    max-height: 300px;
+    max-width: 450px;
+    max-height: 450px;
     border-radius: 50%;
     margin-bottom: 1rem;
 }
@@ -585,6 +588,7 @@ footer p{
 }
 .team-container .member-box ul{
     margin: 1.5rem 0;
+    padding-left: 0;
 }
 .team-container .member-box ul li{
     list-style: none;
@@ -600,6 +604,14 @@ footer p{
     line-height: 1.7rem;
 }
 
+@media(max-width: 425px){
+    .team-container .member-box .member-img img{
+        max-width: 250px;
+        max-height: 250px;
+        border-radius: 50%;
+        margin-bottom: 1rem;
+    }
+}
 
 /* Services page */
 
